[package]
name = "lsm-engine"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/lichuang/lsm-engine"
keywords = ["storage", "lsm"]
license = "Apache-2.0"
repository = "https://github.com/lichuang/lsm-engine"

[dependencies]
backtrace = "0.3.73"
bytes = "1.10.1"
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.3"
thiserror = "1.0.0"
parking_lot = "0.12"
paste = "1.0.9"
